MGMT-3885: fix review comments

--- a/scripts/haproxy.cfg
+++ b/scripts/haproxy.cfg
@@ -1,37 +1,33 @@
-# Any change in this file should be reflected in discovery-infra/start_discovery.py as well
+global
+  lua-load /etc/haproxy/choose_backend.lua
+
 defaults
   timeout client 30s
   timeout server 30s
   timeout connect 5s
 
 frontend https
-    bind :::443 v4v6
+    bind :::443 v6only
     mode tcp
     option tcplog
     tcp-request inspect-delay 5s
     tcp-request content accept if { req.ssl_hello_type 1 }
-
-    use_backend quay if { req_ssl_sni -i quay.io }
-    use_backend cdn02_quay if { req_ssl_sni -i cdn02.quay.io }
-    use_backend mirror_openshift_com if { req_ssl_sni -i mirror.openshift.com }
-    use_backend registry_ci_openshift_org if { req_ssl_sni -i registry.ci.openshift.org }
-    use_backend ci_registry_aws if { req_ssl_sni -i ci-dv2np-image-registry-us-east-1-aunteqmixxpqypvdqwbmjbiloeix.s3.dualstack.us-east-1.amazonaws.com }
-    use_backend registry_build02_ci_openshift_org if { req_ssl_sni -i registry.build02.ci.openshift.org }
+    use_backend %[lua.choose_backend]
 
 backend quay
-    server remote quay.io:443
+    server quay.io quay.io:443
 
 backend cdn02_quay
-    server remote cdn02.quay.io:443
+    server cdn02.quay.io cdn02.quay.io:443
 
 backend mirror_openshift_com
-    server remote mirror.openshift.com:443
+    server mirror.openshift.com mirror.openshift.com:443
 
 backend registry_ci_openshift_org
-    server remote registry.ci.openshift.org:443
+    server registry.ci.openshift.org registry.ci.openshift.org:443
 
 backend ci_registry_aws
-    server remote ci-dv2np-image-registry-us-east-1-aunteqmixxpqypvdqwbmjbiloeix.s3.dualstack.us-east-1.amazonaws.com:443
+    server ci-dv2np-image-registry-us-east-1-aunteqmixxpqypvdqwbmjbiloeix.s3.dualstack.us-east-1.amazonaws.com ci-dv2np-image-registry-us-east-1-aunteqmixxpqypvdqwbmjbiloeix.s3.dualstack.us-east-1.amazonaws.com:443
 
 backend registry_build02_ci_openshift_org
-    server remote registry.build02.ci.openshift.org:443
+    server registry.build02.ci.openshift.org registry.build02.ci.openshift.org:443
