Add ability to disable test teardown

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -90,3 +90,4 @@ env:
   PROXY: $PROXY
   CHECK_CLUSTER_VERSION: $CHECK_CLUSTER_VERSION
   ISO_IMAGE_TYPE: $ISO_IMAGE_TYPE
+  TEST_TEARDOWN: $TEST_TEARDOWN
