--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -19,6 +19,7 @@ RUN curl -SL https://github.com/dmacvicar/terraform-provider-libvirt/releases/do
 
 COPY requirements.txt /tmp/
 COPY --from=service /clients/assisted-service-client-*.tar.gz /build/pip/
+RUN pip3 install --no-cache-dir --upgrade pip
 RUN pip3 install --no-cache-dir -r /tmp/requirements.txt && \
   pip3 install --upgrade /build/pip/*
 
