--- a/skipper.yaml
+++ b/skipper.yaml
@@ -18,6 +18,7 @@ volumes:
   - /dev/:/dev
   - /run/udev:/run/udev
   - /var/ai-logs:/var/ai-logs
+  - $HOME/.test-infra/etc/nginx/stream.d:/etc/nginx/stream.d
 env:
   PULL_SECRET: $PULL_SECRET
   SECOND_PULL_SECRET: $SECOND_PULL_SECRET
