MGMT-3319: Integrating cluster list with OCM.
Adding WITH_AMS_SUBSCRIPTIONS to deployment, defaulted to 'false'.

Signed-off-by: Yoni Bettan <ybettan@redhat.com>

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -56,6 +56,7 @@ env:
   SERVICE_NAME: $SERVICE_NAME
   OC_PARAMS: $OC_PARAMS
   ENABLE_AUTH: $ENABLE_AUTH
+  WITH_AMS_SUBSCRIPTIONS: $WITH_AMS_SUBSCRIPTIONS
   OFFLINE_TOKEN: $OFFLINE_TOKEN
   SECOND_OFFLINE_TOKEN: $SECOND_OFFLINE_TOKEN
   SSO_URL: $SSO_URL
