--- a/skipper.yaml
+++ b/skipper.yaml
@@ -91,3 +91,4 @@ env:
   CHECK_CLUSTER_VERSION: $CHECK_CLUSTER_VERSION
   ISO_IMAGE_TYPE: $ISO_IMAGE_TYPE
   TEST_TEARDOWN: $TEST_TEARDOWN
+  ENABLE_KUBE_API: $ENABLE_KUBE_API
