--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -7,7 +7,7 @@ RUN yum -y install make gcc unzip wget curl git podman httpd-tools jq nss_wrappe
   libvirt-client libvirt-devel libguestfs-tools && \
   yum clean all && pip3 install --upgrade pip
 
-RUN wget -q https://releases.hashicorp.com/terraform/0.12.29/terraform_0.12.29_linux_amd64.zip && unzip terraform*.zip -d /usr/bin/ && rm -rf terraform*.zip
+RUN curl -Lo terraform.zip https://releases.hashicorp.com/terraform/0.12.29/terraform_0.12.29_linux_amd64.zip && unzip terraform.zip -d /usr/bin/ && rm -rf terraform.zip
 
 RUN curl -Lo minikube https://storage.googleapis.com/minikube/releases/v1.10.1/minikube-linux-amd64 \
   && chmod +x minikube && mkdir -p /usr/local/bin/ && install minikube /usr/local/bin/
