--- a/skipper.yaml
+++ b/skipper.yaml
@@ -19,77 +19,4 @@ volumes:
   - /run/udev:/run/udev
   - /var/ai-logs:/var/ai-logs
   - $HOME/.test-infra/etc/nginx/stream.d:/etc/nginx/stream.d
-env:
-  PULL_SECRET: $PULL_SECRET
-  SECOND_PULL_SECRET: $SECOND_PULL_SECRET
-  NUM_WORKERS: $NUM_WORKERS
-  SSH_PUB_KEY: $SSH_PUB_KEY
-  CLUSTER_NAME: $CLUSTER_NAME
-  BASE_DOMAIN: $BASE_DOMAIN
-  NETWORK_CIDR: $NETWORK_CIDR
-  NETWORK_NAME: $NETWORK_NAME
-  NETWORK_MTU: $NETWORK_MTU
-  SERVICE: $SERVICE
-  OBJEXP: $OBJEXP
-  INSTALLER_IMAGE: $INSTALLER_IMAGE
-  CONTROLLER_IMAGE: $CONTROLLER_IMAGE
-  OPENSHIFT_VERSION: $OPENSHIFT_VERSION
-  OPENSHIFT_VERSIONS: $OPENSHIFT_VERSIONS
-  OPENSHIFT_INSTALL_RELEASE_IMAGE: $OPENSHIFT_INSTALL_RELEASE_IMAGE
-  KUBECONFIG: $KUBECONFIG
-  HTTP_PROXY_URL: $HTTP_PROXY_URL
-  HTTPS_PROXY_URL: $HTTPS_PROXY_URL
-  NO_PROXY_VALUES: $NO_PROXY_VALUES
-  SERVICE_BASE_URL: $SERVICE_BASE_URL
-  AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
-  ISO: $ISO
-  SERVICE_BRANCH: $SERVICE_BRANCH
-  SERVICE_REPO: $SERVICE_REPO
-  REMOTE_SERVICE_URL: $REMOTE_SERVICE_URL
-  CLUSTER_ID: $CLUSTER_ID
-  NUM_MASTERS: $NUM_MASTERS
-  BASE_DNS_DOMAINS: $BASE_DNS_DOMAINS
-  ROUTE53_SECRET: $ROUTE53_SECRET
-  MASTER_DISK: $MASTER_DISK
-  WORKER_DISK: $WORKER_DISK
-  NAMESPACE: $NAMESPACE
-  IMAGE_BUILDER: $IMAGE_BUILDER
-  SERVICE_NAME: $SERVICE_NAME
-  OC_PARAMS: $OC_PARAMS
-  ENABLE_AUTH: $ENABLE_AUTH
-  WITH_AMS_SUBSCRIPTIONS: $WITH_AMS_SUBSCRIPTIONS
-  OFFLINE_TOKEN: $OFFLINE_TOKEN
-  SECOND_OFFLINE_TOKEN: $SECOND_OFFLINE_TOKEN
-  SSO_URL: $SSO_URL
-  OCM_CLIENT_ID: $OCM_CLIENT_ID
-  OCM_CLIENT_SECRET: $OCM_CLIENT_SECRET
-  OCM_BASE_URL: $OCM_BASE_URL
-  VIP_DHCP_ALLOCATION: $VIP_DHCP_ALLOCATION
-  NAMESPACE_INDEX: $NAMESPACE_INDEX
-  PROFILE: $PROFILE
-  KEEP_ISO_FLAG: $KEEP_ISO_FLAG
-  SERVICE_REPLICAS_COUNT: $SERVICE_REPLICAS_COUNT
-  UI_IMAGE: $UI_IMAGE
-  API_VIP_IP: $API_VIP_IP
-  API_VIP_DNSNAME: $API_VIP_DNSNAME
-  DEPLOY_TARGET: $DEPLOY_TARGET
-  ASSISTED_SERVICE_HOST: $ASSISTED_SERVICE_HOST
-  LOGS_DEST: $LOGS_DEST
-  NODE_ENV: $NODE_ENV
-  NUM_DAY2_WORKERS: $NUM_DAY2_WORKERS
-  TEST: $TEST
-  TEST_FUNC: $TEST_FUNC
-  TEST_MARKER: $TEST_MARKER
-  TEST_WORKERS_NUM: $TEST_WORKERS_NUM
-  PUBLIC_CONTAINER_REGISTRIES: $PUBLIC_CONTAINER_REGISTRIES
-  E2E_TESTS_MODE: $E2E_TESTS_MODE
-  LOG_FOLDER: $LOG_FOLDER
-  IPv4: $IPv4
-  IPv6: $IPv6
-  PYTHONPATH: $PYTHONPATH
-  PLATFORM: $PLATFORM
-  STATIC_IPS_CONFIG: $STATIC_IPS_CONFIG
-  PROXY: $PROXY
-  CHECK_CLUSTER_VERSION: $CHECK_CLUSTER_VERSION
-  ISO_IMAGE_TYPE: $ISO_IMAGE_TYPE
-  TEST_TEARDOWN: $TEST_TEARDOWN
+env-file: skipper.env
