--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -4,7 +4,9 @@ FROM quay.io/centos/centos:8.3.2011
 
 RUN yum -y install make gcc unzip wget curl git podman httpd-tools jq nss_wrapper \
   python3 python3-devel \
-  libvirt-client libvirt-devel libguestfs-tools && \
+  libvirt-client libvirt-devel libguestfs-tools \
+  rsync \
+  && \
   yum clean all && pip3 install --upgrade pip
 
 RUN curl -Lo terraform.zip https://releases.hashicorp.com/terraform/0.12.29/terraform_0.12.29_linux_amd64.zip && unzip terraform.zip -d /usr/bin/ && rm -rf terraform.zip
