--- a/skipper.env
+++ b/skipper.env
@@ -34,7 +34,7 @@ NAMESPACE
 IMAGE_BUILDER
 SERVICE_NAME
 OC_PARAMS
-ENABLE_AUTH
+AUTH_TYPE
 WITH_AMS_SUBSCRIPTIONS
 OFFLINE_TOKEN
 SECOND_OFFLINE_TOKEN
