--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-boto3==1.17.23
+boto3==1.17.39
 dnspython==2.1.0
 ipython==7.11.1
-ipdb==0.13.6
-libvirt-python==7.0.0
-pre-commit==2.11.0
+ipdb==0.13.7
+libvirt-python==7.1.0
+pre-commit==2.11.1
 pyyaml==5.4.1
 python-terraform==0.10.1
 kubernetes==12.0.1
@@ -25,4 +25,4 @@ pytest-xdist==2.2.1
 filelock==3.0.12
 urllib3==1.26.4
 elasticsearch==7.12.0
-
+junit-report>=0.1.12
