--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,30 @@
 boto3==1.17.62
+debugpy>=1.2.1
 dnspython==2.1.0
-ipython==7.11.1
+elasticsearch==7.12.1
+filelock==3.0.12
 ipdb==0.13.7
-libvirt-python==7.2.0
-pre-commit==2.12.1
-pyyaml==5.4.1
-python-terraform==0.10.1
+ipython==7.11.1
+Jinja2===2.11.3
+jira==2.0.0
+junit-report>=0.1.20
 kubernetes==12.0.1
+libvirt-python==7.2.0
 munch==2.5.0
-requests==2.25.1
-retry==0.9.2
-tqdm==4.60.0
-waiting==1.4.1
 netaddr==0.8.0
+openshift-client==1.0.13
+paramiko==2.7.2
+pre-commit==2.12.1
+pytest-xdist==2.2.1
 pytest==6.2.3
 python-dateutil==2.8.1
-jira==2.0.0
-tabulate==0.8.9
-paramiko==2.7.2
+python-magic==0.4.22
+python-terraform==0.10.1
+pyyaml==5.4.1
+requests==2.25.1
+retry==0.9.2
 scp==0.13.3
-openshift-client==1.0.13
-Jinja2===2.11.3
-pytest-xdist==2.2.1
-filelock==3.0.12
+tabulate==0.8.9
+tqdm==4.60.0
 urllib3==1.26.4
-elasticsearch==7.12.1
-junit-report>=0.1.20
-debugpy>=1.2.1
+waiting==1.4.1
