MGMT-5395: Support multiple installations per namespace
By passing CLUSTER_INDEX (by default 0), test-infra will support
multiple installations for a specific namespace.

--- a/skipper.env
+++ b/skipper.env
@@ -44,6 +44,7 @@ OCM_CLIENT_SECRET
 OCM_BASE_URL
 VIP_DHCP_ALLOCATION
 NAMESPACE_INDEX
+CLUSTER_INDEX
 KEEP_ISO_FLAG
 SERVICE_REPLICAS_COUNT
 UI_IMAGE
