--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ paramiko==2.7.2
 scp==0.13.3
 openshift-client==1.0.13
 Jinja2===2.11.3
-pytest-xdist==2.2.1
+pytest-parallel==0.1.0
 filelock==3.0.12
 urllib3==1.26.4
 elasticsearch==7.12.1
