MGMT-6675 Hyperthreading support for test-infra
   - add HYPERTHREADING env variable support to Makefile
   - create corresponding configuration in agent_cluster_install
   - propogate the configuration to cluster creation

--- a/skipper.env
+++ b/skipper.env
@@ -79,7 +79,9 @@ OLM_OPERATORS
 KUBE_API
 INSTALLER_KUBECONFIG
 DEBUG
+FOCUS
 HW_VALIDATOR_MIN_CPU_CORES_SNO
 HW_VALIDATOR_MIN_RAM_GIB_SNO
 MASTER_MEMORY
 WORKER_MEMORY
+HYPERTHREADING
