MGMT-6806: Enable remote debugging on Beaker hosts 1. Patch the image with the debug information 2. Expose debug port in the firewall 3. Expose debug port in the host (xinit) - Support multiple ports recognition 4. Enable registry add-on - a completion to openshift/assisted-service#1611 PR 5. Deploy only a single AI replica

--- a/skipper.env
+++ b/skipper.env
@@ -87,4 +87,7 @@ WORKER_MEMORY
 HYPERTHREADING
 ES_INDEX
 DISABLED_HOST_VALIDATIONS
+CONTAINER_COMMAND
+DEBUG_SERVICE
+DEBUG_SERVICE_PORT
 SSH_CLIENT
