Upgrading terraform to 0.14 Adding hcl2 to read a terraform files Add vsphere env variables Resolve terraform variables Query terraform resources

--- a/skipper.env
+++ b/skipper.env
@@ -92,3 +92,10 @@ DEBUG_SERVICE
 DEBUG_SERVICE_PORT
 SSH_CLIENT
 LOCAL_ASSISTED_ORG
+VSPHERE_CLUSTER
+VSPHERE_USERNAME
+VSPHERE_NETWORK
+VSPHERE_VCENTER
+VSPHERE_DATACENTER
+VSPHERE_DATASTORE
+VSPHERE_PASSWORD
