--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
 boto3==1.17.109
+dataclasses==0.8
+debugpy==1.3.0
 dnspython==2.1.0
-ipython==7.11.1
+elasticsearch==7.13.3
+filelock==3.0.12
+frozendict==2.0.3
 ipdb==0.13.9
-libvirt-python==7.5.0
-pre-commit==2.13.0
-pyyaml==5.4.1
-python-terraform==0.10.1
+ipython==7.11.1
+Jinja2===3.0.1
+jira==3.0.1
+junit-report==0.1.24
 kubernetes==17.17.0
+libvirt-python==7.5.0
 munch==2.5.0
-requests==2.25.1
-retry==0.9.2
-tqdm==4.61.2
-waiting==1.4.1
 netaddr==0.8.0
+netifaces==0.11.0
+openshift-client==1.0.13
+paramiko==2.7.2
+pre-commit==2.13.0
+pycharm_remote_debugger==0.1.13
+pytest-xdist==2.3.0
 pytest==6.2.4
 python-dateutil==2.8.1
-jira==3.0.1
-tabulate==0.8.9
-paramiko==2.7.2
+python-hcl2==2.0.3
+python-terraform==0.10.1
+pyyaml==5.4.1
+requests==2.25.1
+retry==0.9.2
 scp==0.13.6
-openshift-client==1.0.13
-Jinja2===3.0.1
-pytest-xdist==2.3.0
-filelock==3.0.12
+tabulate==0.8.9
+tqdm==4.61.2
 urllib3==1.26.6
-elasticsearch==7.13.3
-junit-report>=0.1.20
-debugpy>=1.2.1
-netifaces==0.11.0
-frozendict==2.0.3
-pycharm_remote_debugger==0.1.13
-python-hcl2>=2.0.3
-dataclasses~=0.8
+waiting==1.4.1
