--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -26,6 +26,6 @@ COPY requirements.txt /tmp/
 COPY --from=service /clients/assisted-service-client-*.tar.gz /build/pip/
 RUN pip3 install --no-cache-dir -I -r /tmp/requirements.txt && \
   pip3 install --upgrade /build/pip/*
-
+RUN pip3 install --no-cache-dir -I --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple junit-report==0.1.37.post11
 # setting pre-commit env
 ENV PRE_COMMIT_HOME build
