--- a/skipper.env
+++ b/skipper.env
@@ -81,6 +81,8 @@ HW_VALIDATOR_MIN_CPU_CORES_SNO
 HW_VALIDATOR_MIN_RAM_GIB_SNO
 MASTER_MEMORY
 WORKER_MEMORY
+MASTER_CPU
+MASTER_DISK_COUNT
 HYPERTHREADING
 ES_INDEX
 DISABLED_HOST_VALIDATIONS
