--- a/skipper.yaml
+++ b/skipper.yaml
@@ -36,8 +36,13 @@ volumes:
   - /dev/:/dev
   - /run/udev:/run/udev
 
+  # podman - sharing the podman.socket between the host and the skipper container
+  - $XDG_RUNTIME_DIR/podman/podman.sock:/run/podman/podman.sock
+
   # Network manager dnsmasq.  Mounted to allow the container to write dnsmasq config files to HOST Network Manager
   - /etc/NetworkManager/dnsmasq.d:/etc/NetworkManager/dnsmasq.d
 env_file:
   - skipper.env
+env:
+  CONTAINER_HOST: unix://run/podman/podman.sock
 
