--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -20,6 +20,8 @@ RUN yum -y install \
   libguestfs-tools \
     && yum clean all
 
+RUN alternatives --set python /usr/bin/python3.9
+
 RUN curl -Lo terraform.zip https://releases.hashicorp.com/terraform/0.14.11/terraform_0.14.11_linux_amd64.zip && unzip terraform.zip -d /usr/bin/ && rm -rf terraform.zip
 
 COPY requirements.txt /tmp/
