--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -23,9 +23,10 @@ RUN yum -y install \
 RUN curl -Lo terraform.zip https://releases.hashicorp.com/terraform/0.14.11/terraform_0.14.11_linux_amd64.zip && unzip terraform.zip -d /usr/bin/ && rm -rf terraform.zip
 
 COPY requirements.txt /tmp/
+COPY requirements-dev.txt /tmp/
 COPY --from=service /clients/assisted-service-client-*.tar.gz /build/pip/
 RUN pip3 install --upgrade pip && \
-      pip3 install --no-cache-dir -I -r /tmp/requirements.txt && \
+      pip3 install --no-cache-dir -I -r /tmp/requirements.txt -r /tmp/requirements-dev.txt && \
       pip3 install --upgrade /build/pip/*
 
 # setting pre-commit env
