--- a/skipper.env
+++ b/skipper.env
@@ -82,7 +82,9 @@ HW_VALIDATOR_MIN_RAM_GIB_SNO
 MASTER_MEMORY
 WORKER_MEMORY
 MASTER_CPU
+WORKER_CPU
 MASTER_DISK_COUNT
+WORKER_DISK_COUNT
 HYPERTHREADING
 ES_INDEX
 DISABLED_HOST_VALIDATIONS
@@ -104,6 +106,6 @@ CI
 NETWORK_TYPE
 OS_IMAGES
 RELEASE_IMAGES
+DISK_ENCRYPTION_MODE
+DISK_ENCRYPTION_ROLES
 FLAKE8_EXTRA_PARAMS
-WORKER_CPU
-WORKER_DISK_COUNT
