--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ filelock==3.4.0
 frozendict==2.1.1
 ipdb==0.13.9
 ipython==7.11.1
+jedi==0.17.2
 Jinja2===3.0.2
 junit-report==0.2.3
 kubernetes==20.13.0
