MGMT-8680: Added CAPI related envs to skipper.env file

--- a/skipper.env
+++ b/skipper.env
@@ -112,3 +112,9 @@ FLAKE8_EXTRA_PARAMS
 TEST_INFRA_DOCKERFILE
 VERIFY_DOWNLOAD_ISO_SSL
 MINIKUBE_HOME
+PROVIDER_REPO
+PROVIDER_BRANCH
+PROVIDER_IMAGE
+HYPERSHIFT_REPO
+HYPERSHIFT_BRANCH
+HYPERSHIFT_IMAGE
