--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    assignees:
+      - "eliorerz"
+      - "osherdp"
     labels:
       - "approved"
       - "lgtm"
