MGMT-9016: Adding port forwarding to assisted image service

--- a/skipper.env
+++ b/skipper.env
@@ -19,6 +19,7 @@ HTTP_PROXY_URL
 HTTPS_PROXY_URL
 NO_PROXY_VALUES
 SERVICE_BASE_URL
+IMAGE_SERVICE_BASE_URL
 AGENT_DOCKER_IMAGE
 ISO
 REMOTE_SERVICE_URL
