--- a/Dockerfile.assisted-test-infra
+++ b/Dockerfile.assisted-test-infra
@@ -18,6 +18,9 @@ RUN dnf -y install \
   libvirt-client \
   libvirt-devel \
   libguestfs-tools \
+  dnf-plugins-core \
+    && dnf config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo \
+    && dnf -y install packer \
     && dnf clean all
 
 RUN curl -Lo terraform.zip https://releases.hashicorp.com/terraform/0.14.11/terraform_0.14.11_linux_amd64.zip && unzip terraform.zip -d /usr/bin/ && rm -rf terraform.zip
