--- a/Dockerfile.assisted-test-infra
+++ b/Dockerfile.assisted-test-infra
@@ -1,6 +1,6 @@
 FROM quay.io/ocpmetal/assisted-service:latest AS service
 
-FROM quay.io/centos/centos:8.3.2011
+FROM quay.io/centos/centos:stream8
 
 RUN dnf -y install \
   make \
@@ -18,7 +18,6 @@ RUN dnf -y install \
   libvirt-client \
   libvirt-devel \
   libguestfs-tools \
-  dnf-plugins-core \
     && dnf config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo \
     && dnf -y install packer \
     && dnf clean all
