--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -1,6 +1,6 @@
 FROM quay.io/ocpmetal/assisted-service:latest AS service
 
-FROM quay.io/centos/centos:8.3.2011
+FROM quay.io/centos/centos:stream8
 
 RUN yum -y install \
   make \
