--- a/Dockerfile.assisted-test-infra
+++ b/Dockerfile.assisted-test-infra
@@ -1,8 +1,8 @@
 FROM quay.io/ocpmetal/assisted-service:latest AS service
 
-FROM quay.io/centos/centos:8.3.2011
+FROM quay.io/centos/centos:stream8
 
-RUN yum -y install \
+RUN dnf -y install \
   make \
   gcc \
   unzip \
@@ -18,15 +18,19 @@ RUN yum -y install \
   libvirt-client \
   libvirt-devel \
   libguestfs-tools \
-    && yum clean all
+    && dnf clean all
 
 RUN curl -Lo terraform.zip https://releases.hashicorp.com/terraform/0.14.11/terraform_0.14.11_linux_amd64.zip && unzip terraform.zip -d /usr/bin/ && rm -rf terraform.zip
 
-COPY requirements.txt /tmp/
+WORKDIR /home/assisted-test-infra
+
+COPY requirements.txt ./
 COPY --from=service /clients/assisted-service-client-*.tar.gz /build/pip/
 RUN pip3 install --upgrade pip && \
-      pip3 install --no-cache-dir -I -r /tmp/requirements.txt && \
+      pip3 install --no-cache-dir -I -r ./requirements.txt && \
       pip3 install --upgrade /build/pip/*
+
+COPY . .
 
 # setting pre-commit env
 ENV PRE_COMMIT_HOME build
