Install govc as a binary to make it more arch-compatible
MGMT-9276 #comment starting to work on it

--- a/Dockerfile.assisted-test-infra
+++ b/Dockerfile.assisted-test-infra
@@ -24,6 +24,7 @@ RUN dnf -y install \
     && dnf clean all
 
 RUN curl -Lo terraform.zip https://releases.hashicorp.com/terraform/0.14.11/terraform_0.14.11_linux_amd64.zip && unzip terraform.zip -d /usr/bin/ && rm -rf terraform.zip
+RUN curl -Lo - "https://github.com/vmware/govmomi/releases/latest/download/govc_$(uname -s)_$(uname -m).tar.gz" | tar -C /usr/local/bin -xvzf - govc
 
 WORKDIR /home/assisted-test-infra
 
@@ -37,7 +38,6 @@ RUN curl -s https://storage.googleapis.com/golang/go1.17.4.linux-amd64.tar.gz | 
 ENV GOPATH=/go
 ENV GOCACHE=/go/.cache
 ENV PATH=$PATH:/usr/local/go/bin:/go/bin
-RUN go get -u github.com/vmware/govmomi/govc
 
 COPY . .
 
