Add basic CLI for test infra

--- a/skipper.env
+++ b/skipper.env
@@ -68,6 +68,7 @@ ES_USER
 ES_PASS
 BACKUP_DESTINATION
 OLM_OPERATORS
+ENABLE_KUBEAPI
 INSTALLER_KUBECONFIG
 DEBUG
 FOCUS
@@ -113,6 +114,7 @@ HYPERSHIFT_BRANCH
 HYPERSHIFT_IMAGE
 DEPLOY_CAPI_PROVIDER
 HOLD_INSTALLATION
+PYTEST_JUNIT_FILE
 LOGGER_NAME
 AGENT_TIMEOUT_START
 ADDITIONAL_NTP_SOURCE
