change SELinux mode and do not create home partition for the CI machine

--- a/packer_files/vsphere_centos_template/centos-config/centos8-ks.cfg
+++ b/packer_files/vsphere_centos_template/centos-config/centos8-ks.cfg
@@ -29,7 +29,8 @@ firstboot --enable
 ignoredisk --only-use=sda
 # System bootloader configuration
 bootloader --append="crashkernel=auto" --location=mbr --boot-drive=sda
-autopart
+autopart --nohome
+
 # Partition clearing information
 clearpart --none --initlabel
 
@@ -41,7 +42,7 @@ sshkey --username=root "${key}"
 rootpw ${password}
 
 %addon com_redhat_kdump --enable --reserve-mb='auto'
-
+selinux --permissive
 %end
 
 %anaconda
