--- a/src/assisted_test_infra/resources/bootstrap_in_place/install-config.yaml
+++ b/src/assisted_test_infra/resources/bootstrap_in_place/install-config.yaml
@@ -21,7 +21,7 @@ networking:
     hostPrefix: 23
   machineNetwork:
   - cidr: 192.168.126.0/24
-  networkType: OpenShiftSDN
+  networkType: OVNKubernetes
   serviceNetwork:
   - 172.30.0.0/16
 platform:
