NO-ISSUE - Change test-infra image to assisted-test-infra. Updates the `skipper.yaml` file to point to the new `Dockerfile.assisted-test-infra`

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -1,5 +1,5 @@
 registry: quay.io
-build-container-image: test-infra
+build-container-image: assisted-test-infra
 build-container-tag: latest
 
 volumes:
@@ -46,4 +46,3 @@ env_file:
 
 env:
   CONTAINER_HOST: unix://run/podman/podman.sock
-
