MGMT-11556 - Add Nutanix support to test-infra infrastructure. Upgrade Terraform to 1.2.7

--- a/skipper.env
+++ b/skipper.env
@@ -129,3 +129,11 @@ WORKERS_COUNT
 MASTERS_COUNT
 IPXE_BOOT
 SUBSYSTEM_LOCAL_REGISTRY
+NUTANIX_USERNAME
+NUTANIX_PASSWORD
+NUTANIX_ENDPOINT
+NUTANIX_PORT
+NUTANIX_CLUSTER_NAME
+NUTANIX_SUBNET_NAME
+TF_LOG_PATH
+TF_LOG
