NO-ISSUE - Upgrade to python 3.10

--- a/Dockerfile.assisted-test-infra
+++ b/Dockerfile.assisted-test-infra
@@ -18,13 +18,15 @@ RUN dnf -y install --enablerepo=crb \
   httpd-tools \
   jq \
   nss_wrapper \
-  python3 \
-  python3-devel \
   libvirt-client \
   libvirt-devel \
   libguestfs-tools \
   libxslt \
    && dnf clean all
+
+# Install latest available python version - For more information see https://github.com/eliorerz/tools/tree/master/python_builder
+COPY --from=quay.io/eerez/python-builder:stream9-3.10.7 /python /python-installation
+RUN cd /python-installation && make install && dnf -y install python3-devel && dnf clean all
 
 RUN curl --retry 5 -Lo packer.zip https://releases.hashicorp.com/packer/1.8.0/packer_1.8.0_linux_386.zip && unzip packer.zip -d /usr/bin/ && mv /usr/bin/packer /usr/bin/packer.io && rm -rf packer.zip
 RUN curl --retry 5 -Lo terraform.zip https://releases.hashicorp.com/terraform/1.2.7/terraform_1.2.7_linux_amd64.zip && unzip terraform.zip -d /usr/bin/ && rm -rf terraform.zip
