--- a/Dockerfile.assisted-test-infra
+++ b/Dockerfile.assisted-test-infra
@@ -46,6 +46,10 @@ RUN pip3 install --upgrade pip && \
       pip3 install --no-cache-dir -I -r ./requirements.txt -r ./requirements-dev.txt && \
       pip3 install --upgrade /build/pip/*
 
+RUN virtualenv /opt/ansible && \
+    source /opt/ansible/bin/activate && \
+    pip3 install --no-cache-dir ansible-core==7.1.0
+
 RUN curl --retry 5 -s https://storage.googleapis.com/golang/go1.18.1.linux-amd64.tar.gz | tar -C /usr/local -xz
 ENV GOPATH=/go
 ENV GOCACHE=/go/.cache
