--- a/ansible_files/equinix_heterogeneous_create_infra_playbook.yml
+++ b/ansible_files/equinix_heterogeneous_create_infra_playbook.yml
@@ -20,19 +20,47 @@
       private: false
   vars:
     terraform_equinix_workdir: "{{ [playbook_dir, '..', 'terraform_files', 'equinix-ci-machine'] | path_join | realpath }}"
-  tasks:
-    # Create the required devices to test heterogeneous scenarios
-    - ansible.builtin.import_role:
-        name: equinix/heterogeneous_create_infra
-    # Export the connection details, required for the common steps in Prow
-    - ansible.builtin.import_role:
-        name: equinix/export_primary_device_connection_details
-    # Build an IPIP tunnel between both of the machines in "heterogeneous" group
-    - ansible.builtin.import_role:
-        name: common/setup_ipip_tunnel
+  roles:
+    - equinix/heterogeneous_create_infra # Create the required devices to test heterogeneous scenarios
+    - equinix/export_primary_device_connection_details # Export the connection details, required for the common steps in Prow
+
+# Here's the network configuration to setup between both devices:
+# ┌─────────────┐
+# │Secondary    │172.16.0.2/30
+# │             ├────────────┐
+# │libvirt net  │            │
+# │172.16.16/20 ├─────────┐  │
+# └─────────────┘10/25    │  │
+#               Equinix   │  │IPIP
+#             managed net │  │tunnel
+# ┌─────────────┐10/25    │  │
+# │Primary      ├─────────┘  │
+# │             │            │
+# │libvirt net  ├────────────┘
+# │192.168/16   │172.16.0.1/30
+# └─────────────┘
+- name: Setup IPIP on primary device
+  hosts: primary[0]
+  vars:
+    primary_ipip_tunnel_ipv4: 172.16.0.1/30
+    secondary_internal_network_prefix: 172.16.16.0/20
+  roles:
+    - name: common/setup_ipip_tunnel
       vars:
-        ipip_group: heterogeneous
-    # - ansible.builtin.import_role:
-    #     name: equinix/install_libvirt
-    # - ansible.builtin.import_role:
-    #     name: equinix/expose_libvirt
+        ipip_local_ipv4: "{{ access_private_ipv4 }}"
+        ipip_remote_ipv4: "{{ hostvars[groups['secondary'][0]].access_private_ipv4 }}"
+        ipip_tunnel_ipv4: "{{ primary_ipip_tunnel_ipv4 }}"
+        ipip_route_to_network: "{{ secondary_internal_network_prefix }}"
+
+- name: Setup IPIP on secondary device
+  hosts: secondary[0]
+  vars:
+    secondary_ipip_tunnel_ipv4: 172.16.0.2/30
+    primary_internal_network_prefix: 192.168.0.0/16
+  roles:
+    - name: common/setup_ipip_tunnel
+      vars:
+        ipip_local_ipv4: "{{ access_private_ipv4 }}"
+        ipip_remote_ipv4: "{{ hostvars[groups['primary'][0]].access_private_ipv4 }}"
+        ipip_tunnel_ipv4: "{{ secondary_ipip_tunnel_ipv4 }}"
+        ipip_route_to_network: "{{ primary_internal_network_prefix }}"
