--- a/ansible_files/roles/common/setup_ipip_tunnel/tasks/main.yml
+++ b/ansible_files/roles/common/setup_ipip_tunnel/tasks/main.yml
@@ -1,9 +1,17 @@
-- name: Check if group "{{ ipip_group }}" exists and contains exactly 2 hosts
-  ansible.builtin.fail:
-    msg: Group "{{ ipip_group }}" must exist and contain exactly 2 hosts
-  when: groups[ipip_group] is not defined or (groups[ipip_group] | length != 2)
+- name: Enable IP forwarding
+  ansible.posix.sysctl:
+    name: net.ipv4.ip_forward
+    value: '1'
+    sysctl_set: true
 
-- name: Ping hosts in group "{{ ipip_group }}"
-  ansible.builtin.ping:
-  delegate_to: "{{ item }}"
-  loop: "{{ groups[ipip_group] }}"
+- name: Configure IPIP tunnel
+  community.general.nmcli:
+    type: ipip
+    conn_name: "{{ ipip_connection_name }}"
+    ifname: "{{ ipip_device_name }}"
+    ip_tunnel_local: "{{ ipip_local_ipv4 }}"
+    ip_tunnel_remote: "{{ ipip_remote_ipv4 }}"
+    ip4: "{{ ipip_tunnel_ipv4 }}"
+    routes4: "{{ ipip_route_to_network }} {{ ipip_tunnel_ipv4 | ansible.utils.ipaddr('peer') }}"
+    autoconnect: true
+    state: present
