MGMT-12442: arm heterogeneous e2e tests
TODO:
- Testing
- Requires https://github.com/openshift/assisted-test-infra/pull/1966
- Architecture handling

--- a/skipper.env
+++ b/skipper.env
@@ -144,3 +144,6 @@ RECLAIM_HOSTS
 PREVIOUS_AGENT_IMAGE
 BROKEN_AGENT_IMAGE
 DISCOVERY_KERNEL_ARGUMENTS
+DAY2_WORKERS_ARCH
+DAY2_WORKER_REMOTE_LIBVIRT_URI
+DAY2_WORKER_REMOTE_LIBVIRT_NETWORK_PREFIX
