--- a/ansible_files/roles/common/setup_libvirtd/tasks/main.yml
+++ b/ansible_files/roles/common/setup_libvirtd/tasks/main.yml
@@ -5,3 +5,17 @@
     state: present
   notify:
     - Start libvirtd service
+
+- name: Create libvirt network hook directory
+  ansible.builtin.file:
+    path: /etc/libvirt/hooks/network.d
+    state: directory
+    mode: '0755'
+
+- name: Install libvirt network hook to allow cross network traffic
+  ansible.builtin.copy:
+    src: allow-cross-network-traffic.sh
+    dest: /etc/libvirt/hooks/network.d/allow-cross-network-traffic.sh
+    owner: root
+    group: root
+    mode: '0755'
