--- a/ansible_files/roles/common/setup_ssh_key_pair/tasks/main.yml
+++ b/ansible_files/roles/common/setup_ssh_key_pair/tasks/main.yml
@@ -1,9 +1,14 @@
 - name: Generate an OpenSSH keypair
   community.crypto.openssh_keypair:
-    path: /tmp/{{ ssh_private_key_path | basename }}
+    path: /tmp/{{ ssh_private_key_name }}
   delegate_to: localhost
   register: ssh_key_pair
   run_once: true
+
+- name: Set ssh settings as fact
+  ansible.builtin.set_fact:
+    ssh_private_key_path: "{{ ansible_user_dir }}/.ssh/{{ ssh_private_key_name }}"
+    ssh_user: "{{ ansible_user_id }}"
 
 - name: Copy private key to remote host
   ansible.builtin.copy:
@@ -22,11 +27,7 @@
 - name: Generate SSH client configuration
   ansible.builtin.template:
     src: "config.j2"
-    dest: "~/.ssh/config"
+    dest: "{{ ansible_user_dir }}/.ssh/config"
     owner: "{{ ansible_user_id }}"
     group: "{{ ansible_user_gid }}"
     mode: '0600'
-
-- name: Set ssh_private_key_path as fact
-  ansible.builtin.set_fact:
-    ssh_private_key_path: "{{ ssh_private_key_path }}"
