--- a/ansible_files/roles/common/setup_ipip_tunnel/tasks/main.yml
+++ b/ansible_files/roles/common/setup_ipip_tunnel/tasks/main.yml
@@ -12,6 +12,6 @@
     ip_tunnel_local: "{{ ipip_local_ipv4 }}"
     ip_tunnel_remote: "{{ ipip_remote_ipv4 }}"
     ip4: "{{ ipip_tunnel_ipv4 }}"
-    routes4: "{{ ipip_route_to_network }} {{ ipip_tunnel_ipv4 | ansible.utils.ipaddr('peer') }}"
+    routes4: "{{ ipip_route_to_network_ipv4 }} {{ ipip_tunnel_ipv4 | ansible.utils.ipaddr('peer') }}"
     autoconnect: true
     state: present
