MGMT-13247: day2 controller can target another libvirt node
Add the ability to target an other libvirt node when configuring the
day2 controller.

--- a/skipper.env
+++ b/skipper.env
@@ -148,3 +148,10 @@ BOOTSTRAP_INJECT_MANIFEST
 INSTALL_MANIFESTS_DIR
 CPU_ARCHITECTURE
 DAY2_CPU_ARCHITECTURE
+DAY2_LIBVIRT_URI
+DAY2_MACHINE_CIDR
+DAY2_PROVISIONING_CIDR
+DAY2_MACHINE_CIDR6
+DAY2_PROVISIONING_CIDR6
+DAY2_NETWORK_IF
+DAY2_SECONDARY_NETWORK_IF
