MGMT-12454: Dump inventory to get sosreport from ARM machine
Build a basic inventory that allows the gather step from the CI to build
an sos report on the ARM machine.

--- a/ansible_files/roles/equinix/export_primary_device_connection_details/tasks/main.yml
+++ b/ansible_files/roles/equinix/export_primary_device_connection_details/tasks/main.yml
@@ -20,4 +20,8 @@
       src: packet-conf.sh
       dest: "{{ shared_dir }}/packet-conf.sh"
 
+  - name: Write Ansible inventory
+    ansible.builtin.template:
+      src: inventory.j2
+      dest: "{{ shared_dir }}/inventory"
   when: shared_dir is defined
