--- a/ansible_files/roles/common/setup_libvirtd/tasks/main.yml
+++ b/ansible_files/roles/common/setup_libvirtd/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Install libvirtd
   ansible.builtin.package:
     name:
+      - libvirt-client
       - libvirt-daemon-kvm
     state: present
   notify:
