--- a/ansible_files/vars/ci_oci_infrastucture.yml
+++ b/ansible_files/vars/ci_oci_infrastucture.yml
@@ -1,8 +1,8 @@
 # OCI related vars, built from CI vars
+unique_id: "{{ build_id }}"
 oci_secret_path: "{{ lookup('env', 'OCI_SECRET_PATH') }}"
-oci_unique_id: "{{ build_id }}"
-oci_tf_state_file: "{{ shared_dir }}/{{ oci_unique_id }}.tfstate"
-oci_tf_vars_file: "{{ shared_dir }}/{{ oci_unique_id }}.tfvars"
+oci_tf_state_file: "{{ shared_dir }}/{{ unique_id }}.tfstate"
+oci_tf_vars_file: "{{ shared_dir }}/{{ unique_id }}.tfvars"
 oci_tenancy_ocid: "{{ lookup('file', oci_secret_path + '/tenancy_ocid') | trim }}"
 oci_user_ocid: "{{ lookup('file', oci_secret_path + '/user_ocid') | trim }}"
 oci_fingerprint: "{{ lookup('file', oci_secret_path + '/fingerprint') | trim }}"
