fix ansible variable names

--- a/ansible_files/vars/ci_oci_infrastucture.yml
+++ b/ansible_files/vars/ci_oci_infrastucture.yml
@@ -3,9 +3,9 @@ unique_id: "{{ build_id }}"
 oci_secret_path: "{{ lookup('env', 'OCI_SECRET_PATH') }}"
 oci_tf_state_file: "{{ shared_dir }}/{{ unique_id }}.tfstate"
 oci_tf_vars_file: "{{ shared_dir }}/{{ unique_id }}.tfvars"
-oci_tenancy_ocid: "{{ lookup('file', oci_secret_path + '/tenancy_ocid') | trim }}"
-oci_user_ocid: "{{ lookup('file', oci_secret_path + '/user_ocid') | trim }}"
+oci_tenancy_id: "{{ lookup('file', oci_secret_path + '/tenancy_ocid') | trim }}"
+oci_user_id: "{{ lookup('file', oci_secret_path + '/user_ocid') | trim }}"
 oci_fingerprint: "{{ lookup('file', oci_secret_path + '/fingerprint') | trim }}"
 oci_region: "{{ lookup('file', oci_secret_path + '/region') | trim }}"
-oci_private_key_path: "{{ oci_secret_path }}/private_key_path"
+oci_private_key_path: "{{ oci_secret_path }}/private_key"
 oci_compartment_id: "{{ lookup('file', oci_secret_path + '/parent_compartment_ocid') | trim }}"
