use cluster_profile_dir to get secrets

--- a/ansible_files/vars/ci_oci_infrastucture.yml
+++ b/ansible_files/vars/ci_oci_infrastucture.yml
@@ -1,11 +1,10 @@
 # OCI related vars, built from CI vars
 unique_id: "{{ build_id }}"
-oci_secret_path: "{{ lookup('env', 'OCI_SECRET_PATH') }}"
 oci_tf_state_file: "{{ shared_dir }}/{{ unique_id }}.tfstate"
 oci_tf_vars_file: "{{ shared_dir }}/{{ unique_id }}.tfvars"
-oci_tenancy_id: "{{ lookup('file', oci_secret_path + '/tenancy_ocid') | trim }}"
-oci_user_id: "{{ lookup('file', oci_secret_path + '/user_ocid') | trim }}"
-oci_fingerprint: "{{ lookup('file', oci_secret_path + '/fingerprint') | trim }}"
-oci_region: "{{ lookup('file', oci_secret_path + '/region') | trim }}"
-oci_private_key_path: "{{ oci_secret_path }}/private_key"
-oci_compartment_id: "{{ lookup('file', oci_secret_path + '/parent_compartment_ocid') | trim }}"
+oci_tenancy_id: "{{ lookup('file', cluster_profile_dir + '/tenancy_ocid') | trim }}"
+oci_user_id: "{{ lookup('file', cluster_profile_dir + '/user_ocid') | trim }}"
+oci_fingerprint: "{{ lookup('file', cluster_profile_dir + '/fingerprint') | trim }}"
+oci_region: "{{ lookup('file', cluster_profile_dir + '/region') | trim }}"
+oci_private_key_path: "{{ cluster_profile_dir }}/private_key"
+oci_compartment_id: "{{ lookup('file', cluster_profile_dir + '/parent_compartment_ocid') | trim }}"
