--- a/ansible_files/roles/oci/create_infra/tasks/main.yml
+++ b/ansible_files/roles/oci/create_infra/tasks/main.yml
@@ -27,3 +27,8 @@
     ansible_user: "{{ deployed_tf.outputs.ci_machine_inventory.value.user }}"
     ansible_ssh_private_key_file: "{{ deployed_tf.outputs.ci_machine_inventory.value.ssh_private_key_path }}"
     groups: "primary"
+
+- name: Collect facts from added host
+  ansible.builtin.setup:
+  delegate_to: "{{ deployed_tf.outputs.ci_machine_inventory.value.display_name }}"
+  delegate_facts: true
