--- a/ansible_files/roles/oci/setup_oci_for_test_infra/tasks/main.yml
+++ b/ansible_files/roles/oci/setup_oci_for_test_infra/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Directory where OCI private key will be stored
-  set_facts:
-    oci_private_key_path_ci_machine: "{{ hostvars[ci_machine].ansible_user_dir }}/.oci/{{ oci_private_key_path | basename }}"
+  ansible.builtin.set_fact:
+    oci_private_key_path_ci_machine: "/root/.oci/{{ oci_private_key_path | basename }}"
 
 - name: Create directory where OCI private key will be stored on CI machine
   ansible.builtin.file:
@@ -8,6 +8,7 @@
     state: directory
     mode: '0700'
   delegate_to: "{{ ci_machine }}"
+  become: true
 
 - name: Copy OCI private key to CI machine
   ansible.builtin.copy:
@@ -15,6 +16,7 @@
     dest: "{{ oci_private_key_path_ci_machine }}"
     mode: '0600'
   delegate_to: "{{ ci_machine }}"
+  become: true
 
 - name: Export OCI configuration in assisted-additional-config to shared_dir
   ansible.builtin.template:
