example vars + typo

--- a/ansible_files/oci_generic_destroy_ci_machine_playbook.yml
+++ b/ansible_files/oci_generic_destroy_ci_machine_playbook.yml
@@ -1,4 +1,4 @@
-- name: Destroy equinix infrastructure
+- name: Destroy OCI infrastructure
   hosts: localhost
   vars_prompt:
     - name: oci_tf_state_file
