--- a/skipper.env
+++ b/skipper.env
@@ -144,7 +144,7 @@ CLUSTER_TAGS
 RECLAIM_HOSTS
 PREVIOUS_AGENT_IMAGE
 BROKEN_AGENT_IMAGE
-DISCOVERY_KERNEL_ARGUMENTS
+KERNEL_ARGUMENTS
 BOOTSTRAP_INJECT_MANIFEST
 INSTALL_MANIFESTS_DIR
 CPU_ARCHITECTURE
