MGMT-14095: Add OCI support to test-infra

--- a/skipper.env
+++ b/skipper.env
@@ -157,3 +157,15 @@ DAY2_MACHINE_CIDR6
 DAY2_PROVISIONING_CIDR6
 DAY2_NETWORK_IF
 DAY2_SECONDARY_NETWORK_IF
+OCI_COMPARTMENT
+OCI_USER
+OCI_PRIVATE_KEY_PATH
+OCI_PUBLIC_KEY_FINGERPRINT
+OCI_TENANCY
+OCI_REGION
+OCI_VCN
+OCI_PUBLIC_SUBNET
+OCI_PRIVATE_SUBNET
+DEBUG_TERRAFORM
+OCI_EXTRA_NODE_NSG_IDS
+OCI_EXTRA_LOAD_BALANCER_NSG_IDS
