MGMT-14945: Setup CCM manifests for OCI

--- a/ansible_files/oci_generic_destroy_ci_machine_playbook.yml
+++ b/ansible_files/oci_generic_destroy_ci_machine_playbook.yml
@@ -1,4 +1,16 @@
-- name: Destroy OCI infrastructure
+- name: Destroy OCI instrastructure provisionned by test-infra
+  hosts: primary
+  tasks:
+    - name: Destroy OCI instrastructure provisionned by test-infra
+      ansible.builtin.command:
+        cmd: make destroy_oci
+      args:
+        chdir: /home/assisted
+      retries: 5
+      delay: 30
+      register: result
+      until: result.rc == 0
+- name: Destroy OCI infrastructure provisionned for CI machine
   hosts: localhost
   vars_prompt:
     - name: oci_tf_state_file
