MGMT-15071: Add MetalLB properties API and Ingress IPs environment variables

--- a/skipper.env
+++ b/skipper.env
@@ -164,6 +164,8 @@ OCI_PUBLIC_KEY_FINGERPRINT
 OCI_TENANCY
 OCI_REGION
 OCI_VCN
+METALLB_API_IP
+METALLB_INGRESS_IP
 OCI_PUBLIC_SUBNET
 OCI_PRIVATE_SUBNET
 DEBUG_TERRAFORM
